test/Fail/ImplicitRecordFields.err
ImplicitRecordFields.agda:30.7-11: error: [UnequalTerms]
The terms
  r .R.A
and
  A
are not equal at type Set
when checking that the expression refl has type
r ≡ record { f = λ x → x ; D = A ; g = λ x _ → x }
